# InfoSec_Ciphers

./: .coverage  README.md  ciphers.db  enigma.db  pyproject.toml  test.py
enigma/: db.py  main.py
enigma/ciphers/enigma/: __init__.py  configs.py  main.py
enigma/ciphers/jefferson/: __init__.py  configs.py  main.py
enigma/routers/: __init__.py  config.py  enigma.py  jefferson.py
front/: index.html  package-lock.json  package.json
front/src/: App.tsx  types.ts
front/src/components/: EnigmaConfig.tsx  JeffersonConfig.tsx
tests/integration/: test_encrypt_api.py
tests/unit/: test_enigma_machine.py  test_jefferson_cipher.py  test_plugboard.py  test_reflector.py  test_rotor.py
